# fern-hack-week

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  additional_sites.csv  check_sites.py  create_incident.py  eslint.config.mjs  get_sites.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  dependabot.yml  deploy-dashboard-dev.yml  deploy-dashboard.yml  deploy-fai.yml  deploy-fdr-dev.yml  deploy-fdr-prod.yml  deploy-fern-docs.yml  deploy-fontawesome-cdn.yml  deploy-local-preview-dev.yml  publish-fdr-sdk.yml  publish-generator-cli.yml  publish-self-hostable-docs.yml  rollback.yml  run-fai-tests.yml  run-self-hosted-tests.yml  scan-selfhosted-docs.yml  site-check.yml  update-twoslash.yml
clis/vercel-scripts/: package.json
scripts/: build-local-bundle.sh  build-local-fai.sh  build-selfhosted-bundle.sh  fai-version.sh  run-local-fai.sh
servers/fai/: .env.example  Dockerfile  README.md  docker-compose.yml  logging.conf  makefile  mypy.ini  pyproject.toml
servers/fai/deploy/: cdk.json  package-lock.json  package.json
servers/fai/deploy/src/: deploy-stack.ts
servers/fai/deploy/src/__test__/: deployStackTest.test.ts
servers/fai/scripts/: create_docker.sh
servers/fai/src/: settings.py
servers/fai/src/enums/: embedding_models.py
servers/fai/src/fai/: app.py  db.py  dependencies.py  main.py
servers/fai/src/fai/api_models/: analytics.py  chat.py  context.py  conversation.py  index.py  insights.py  query.py
servers/fai/src/fai/db_models/: context.py  query.py
servers/fai/src/fai/models/: query.py  user.py
servers/fai/src/fai/routes/: analytics.py  chat.py  conversations.py  index.py  queries.py  query.py  users.py
servers/fai/src/fai/utils/: fetch_grouped_data.py  get_insights_from_queries.py
servers/fai/src/fai/utils/chat/: get_base_system_prompt.py  run_rag_on_query.py
servers/fai/src/fai/utils/histogram/: fill_date_gaps.py
servers/fai/src/fai/utils/index/: get_tbuf_namespace.py
servers/fai/src/fai/utils/insights/: get_insights_from_queries.py  summarize_cluster.py
servers/fai/src/fern-ai/: main.py
servers/fai/src/types/: message.py  model.py
servers/fai/src/utils/: init_db.py  reinit_db.py
servers/fai/tests/: conftest.py  test_health_check.py  test_hello_world.py  test_queries.py  test_query_crud.py  test_service.py
shared/: stylelintrc.shared.json
(+98 files in other folders)
